SERVER-70745 explain command for cluster delete results in error when on shardsvr mongod