src/mongo/s/commands/cluster_count_cmd_s.cpp
@@ -50,6 +50,10 @@ struct ClusterCountCmdS {
     static void checkCanRunHere(OperationContext* opCtx) {
         // Can always run on a mongos.
     }
+
+    static void checkCanExplainHere(OperationContext* opCtx) {
+        // Can always run on a mongos.
+    }
 };
 ClusterCountCmdBase<ClusterCountCmdS> clusterCountCmdS;
 
