src/mongo/s/commands/cluster_find_cmd.h
@@ -141,7 +141,7 @@ public:
                 const auto explainCmd =
                     ClusterExplain::wrapAsExplain(findCommand->toBSON(BSONObj()), verbosity);
 
-                Impl::checkCanRunHere(opCtx);
+                Impl::checkCanExplainHere(opCtx);
 
                 long long millisElapsed;
                 std::vector<AsyncRequestsSender::Response> shardResponses;
