src/mongo/s/commands/cluster_write_cmd_s.cpp
@@ -48,6 +48,10 @@ struct ClusterInsertCmdS {
     static void checkCanRunHere(OperationContext* opCtx) {
         // Can always run on a mongos.
     }
+
+    static void checkCanExplainHere(OperationContext* opCtx) {
+        // Can always run on a mongos.
+    }
 };
 ClusterInsertCmdBase<ClusterInsertCmdS> clusterInsertCmdS;
 
@@ -67,6 +71,10 @@ struct ClusterUpdateCmdS {
     static void checkCanRunHere(OperationContext* opCtx) {
         // Can always run on a mongos.
     }
+
+    static void checkCanExplainHere(OperationContext* opCtx) {
+        // Can always run on a mongos.
+    }
 };
 ClusterUpdateCmdBase<ClusterUpdateCmdS> clusterUpdateCmdS;
 
@@ -84,6 +92,10 @@ struct ClusterDeleteCmdS {
     }
 
     static void checkCanRunHere(OperationContext* opCtx) {
+        // Can always run on a mongos.
+    }
+
+    static void checkCanExplainHere(OperationContext* opCtx) {
         // Can always run on a mongos.
     }
 };
